<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".orders.Update_ModifyOrder"
    android:background="@color/gray">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-377dp"
        tools:layout_editor_absoluteY="137dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updating_the_order"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/modelNumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/model_number"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/modelInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/materialText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/material"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <Spinner
                android:id="@+id/materialDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />


            <Button
                android:id="@+id/chooseDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-smallcaps"
                android:onClick="datePickerDialog"
                android:paddingStart="10dp"
                android:text="@string/choose_date"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/displayDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Party_name"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/partyNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/party_name"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/deptText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/department"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/updateProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Spinner
                android:id="@+id/deptDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/baseFeaturesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/base_features"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/basefeaturesInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/base_features_hint_text"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Extra_quantity"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/extraQtyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/extra_quantity"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textColorHint="@color/teal_200"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Extra_features"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/extraFeaturesInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/extra_features_hint_text"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Size"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/sizeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/size"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Pkg_quantity"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/pkgQtyInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/pkgqty"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Number_type"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/numberType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/number_type"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Other_color_index"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/otherColorIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/other_color_index"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Order_name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/orderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/order_name"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Mechanical_features"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/mechfeaturesInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/mech_features"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Copper"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/copper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="Copper"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="NP:"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/NP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/NP"
                android:textColor="@color/white"
                android:inputType="number"
                android:textColorHint="@color/teal_200" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Gp"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/GP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/gP"
                android:textColor="@color/white"
                android:inputType="number"
                android:textColorHint="@color/teal_200" />

            <Button
                android:id="@+id/generateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-smallcaps"
                android:onClick="onUpdateButtonClicked"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>