<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".orders.creatingWorkOrder">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/creatingOrderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/creating_a_new_order"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Pkg_quantity"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/pkgQtyInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/pkgqty"
                android:textColor="@color/plum"
                android:textColorHint="@color/purple_700"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Number_type"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/numberTypeDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Other_color_index"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/otherColorIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/other_color_index"
                android:inputType="number"
                android:textColor="@color/plum"
                android:textColorHint="@color/purple_700"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Order_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/orderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/order_name"
                android:textColor="@color/plum"
                android:textColorHint="@color/purple_700"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/createOrderProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Mechanical_features"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/mechFeaturesDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Copper"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/copper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="Copper"
                android:inputType="number"
                android:textColor="@color/plum"
                android:textColorHint="@color/purple_700" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="NP:"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/NP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/NP"
                android:inputType="number"
                android:textColor="@color/plum"
                android:textColorHint="@color/purple_700" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/Gp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/GP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/gP"
                android:inputType="number"
                android:textColor="@color/plum"
                android:textColorHint="@color/purple_700" />

            <Button
                android:id="@+id/generateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="70dp"
                android:backgroundTint="@color/purple_200"
                android:fontFamily="sans-serif-smallcaps"
                android:onClick="onGenerateButtonClicked"
                android:text="@string/generate"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        app:itemBackground="@color/purple_200"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>